--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "joi": "^17.7.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
